<resources>
    <string name="app_name">Apuri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_anime">Anime</string>
    <string name="txt_manga">Manga</string>
    <string name="txt_episodes">Episodes</string>
    <string name="txt_trending">Trending</string>
    <string name="txt_empty_list">This list is empty.</string>
    <string name="txt_see_more">More</string>
    <string name="txt_search_anime">Search anime</string>
    <string name="txt_categories">Categories</string>
    <string name="txt_search_categories">Search categories</string>
    <string name="txt_type_bind">Type: %1$s</string>
    <string name="txt_average_rating_bind">(%1$s)%</string>
    <string name="txt_average_rating">Average rating</string>
    <string name="txt_age_rating_bind">Age rating: %1$s</string>
    <string name="txt_years_bind">%1$s - %2$s (%3$s)</string>
    <string name="txt_genres">Genres</string>
    <string name="txt_play_video">Play video</string>
    <string name="txt_season_episode_bind">Season %1$s: Ep %2$s</string>
    <string name="txt_synopsis">Synopsis</string>
    <string name="txt_general">General</string>
    <string name="txt_status_bind">Status: %1$s</string>
    <string name="txt_start_date_bind">Start date: %1$s</string>
    <string name="txt_end_date_bind">End date: %1$s</string>
    <string name="txt_air_date_bind">Air date: %1$s</string>
    <string name="txt_synopsis_bind">Synopsis: %1$s</string>
    <string name="txt_episode_title_bind">S%1$s: Ep %2$s - %3$s</string>
    <string name="txt_all_anime">All anime</string>
    <string name="txt_all_manga">All manga</string>
    <string name="txt_volume_count_bind">Volume count: %1$s</string>
    <string name="txt_volume_number_bind">Vol %1$s. No %2$s</string>
    <string name="txt_chapter_no_title">This chapter has no title.</string>
    <string name="txt_search_manga">Search manga</string>
    <string name="txt_episode_count_bind">Episode count: %1$s</string>
</resources>