<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="episode"
            type="github.ardondev.apuri.network.models.Episode"/>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        tools:text="@string/txt_episode_title_bind"
                        android:text="@{@string/txt_episode_title_bind(episode.attributes.seasonNumber, episode.attributes.number, episode.attributes.canonicalTitle)}"
                        android:layout_weight="1"
                        android:layout_marginEnd="16dp"/>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/episodeDetail_closeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_round_cancel_24"
                        android:background="?selectableItemBackgroundBorderless"/>

                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        tools:srcCompat="@tools:sample/avatars"
                        android:scaleType="centerCrop"
                        app:setRemoteImage="@{episode.attributes.thumbnail.original}"/>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    tools:text="@string/txt_air_date_bind"
                    android:text="@{@string/txt_air_date_bind(episode.attributes.airdate)}"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    tools:text="@string/txt_synopsis_bind"
                    android:text="@{@string/txt_synopsis_bind(episode.attributes.synopsis)}"
                    android:layout_marginTop="16dp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.card.MaterialCardView>

</layout>