<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="anime"
            type="github.ardondev.apuri.network.models.Anime" />

        <variable
            name="viewModel"
            type="github.ardondev.apuri.ui.anime_detail.AnimeDetailViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.anime_detail.AnimeDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/animeDetail_appBarLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/animeDetail_collapsingTbLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:collapsedTitleGravity="start"
                app:collapsedTitleTextAppearance="@style/Apuri.ShadowTitleText"
                app:expandedTitleGravity="center"
                app:expandedTitleTextAppearance="@style/Apuri.ShadowTitleText"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        app:setRemoteImage="@{anime.attributes.coverImage.small}" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/black_50" />

                </RelativeLayout>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/animeDetail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_round_arrow_back_ios_24"
                    app:navigationIconTint="@color/white"
                    app:title="@{anime.attributes.canonicalTitle}" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <com.google.android.material.button.MaterialButton
                    style="@style/Apuri.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_play_video"
                    app:icon="@drawable/ic_round_play_circle_24" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:setRandomStrokeColor="@{true}"
                    app:strokeWidth="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:setAnimeStatus="@{anime}"
                        tools:text="1999 - 2020 (finished)" />

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp"
                        app:setRandomStrokeColor="@{true}"
                        app:strokeWidth="2dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@{@string/txt_average_rating_bind(anime.attributes.averageRating)}"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                            tools:text="@string/txt_average_rating_bind" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp"
                        app:setRandomStrokeColor="@{true}"
                        app:strokeWidth="2dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@{@string/txt_age_rating_bind(anime.attributes.ageRating)}"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                            tools:text="@string/txt_age_rating_bind" />

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{anime.attributes.synopsis}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/txt_genres"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/animeDetail_genresRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        android:paddingStart="16dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_genre" />

                    <ProgressBar
                        android:id="@+id/animeDetail_genresProgressView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:setProgressVisibility="@{viewModel.genreListStatus}" />

                    <TextView
                        android:id="@+id/animeDetail_genresErrorTxt"
                        message="@{viewModel.genreListError}"
                        status="@{viewModel.genreListStatus}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Error text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/txt_episodes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/animeDetail_episodesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        android:paddingStart="16dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_episode" />

                    <ProgressBar
                        android:id="@+id/animeDetail_episodesProgressView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:setProgressVisibility="@{viewModel.episodeListStatus}" />

                    <TextView
                        android:id="@+id/animeDetail_episodesErrorTxt"
                        message="@{viewModel.episodeListError}"
                        status="@{viewModel.episodeListStatus}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Error text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>